# dvoretskyi

./: .env.example  .gitignore  CLAUDE.md  README.md  alembic.ini  pyproject.toml
.github/workflows/: ci.yml
alembic/: env.py
alembic/versions/: 0001_initial.py  0002_meter_readings.py  0003_meter_decimals.py  0004_households.py
deploy/: README.md  dvoretskyi.service  dvoretskyi.service.template  nginx-dvoretskyi.conf
docs/: dvoretskyi-agent-spec.md  dvoretskyi-phase1-claude-code-prompt.md  dvoretskyi-phase2-claude-code-prompt.md  komunalka-agent-spec.md  komunalka-phase1-claude-code-prompt.md  komunalka-phase2-claude-code-prompt.md
scripts/: build_espeak_stress.py  deploy.sh  uk_stress_overrides.txt
src/dvoretskyi/: __init__.py  app.py  cli.py  clock.py  config.py  households.py
src/dvoretskyi/agent/: balance.py  charts.py  dispatcher.py  infolviv.py  jsonx.py  meters.py  persona.py  photo_store.py  provider.py  submission.py  tools.py  transcription.py  tts.py  vision.py
src/dvoretskyi/bot/: app.py  keyboards.py
src/dvoretskyi/db/: models.py  session.py
src/dvoretskyi/mono/: client.py  matcher.py  schemas.py  webhook.py
src/dvoretskyi/reminders/: engine.py
src/komunalka/: __init__.py  app.py  cli.py  clock.py  config.py
src/komunalka/agent/: dispatcher.py  meters.py  persona.py  provider.py  submission.py  tools.py  vision.py
src/komunalka/bot/: app.py  keyboards.py
src/komunalka/db/: models.py  session.py
src/komunalka/mono/: client.py  matcher.py  schemas.py  webhook.py
src/komunalka/reminders/: engine.py
tests/: conftest.py  test_allowlist.py  test_balance.py  test_commands.py  test_dispatcher.py  test_households.py  test_infolviv.py  test_matcher.py  test_meter_submit_flow.py  test_meters_validation.py  test_payment_journal_plan.py  test_photo_handler.py  test_photo_store.py  test_provider.py  test_reminders.py  test_reminders_balance.py  test_reminders_meter.py  test_scheduler.py  test_submission.py  test_tools.py  test_tts.py  test_vision.py  test_voice_handler.py  test_webhook.py
