[project]
name = "dvoretskyi"
version = "0.1.0"
description = "Комунальний Дворецький — single-user Telegram utility butler agent (money + stats + reminders + meters)"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.30",
    "aiogram>=3.13,<4",
    "sqlalchemy[asyncio]>=2.0",
    "aiosqlite>=0.20",
    "alembic>=1.13",
    "pydantic>=2.7",
    "pydantic-settings>=2.3",
    "redis>=5.0",
    "apscheduler>=3.10,<4",
    "matplotlib>=3.8",
    "httpx>=0.27",
    "pillow>=10",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "ruff>=0.15",
    "mypy>=1.13",
]

[project.scripts]
dvoretskyi = "dvoretskyi.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/dvoretskyi"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
pythonpath = ["src"]
filterwarnings = ["ignore::DeprecationWarning"]

[tool.ruff]
line-length = 90
target-version = "py312"
src = ["src", "tests"]

[tool.ruff.lint]
# pycodestyle(E,W), pyflakes(F), isort(I), pyupgrade(UP), flake8-bugbear(B)
select = ["E", "W", "F", "I", "UP", "B"]

[tool.ruff.lint.per-file-ignores]
# persona.py is the Ukrainian system prompt — long prose lines are intentional.
"src/dvoretskyi/agent/persona.py" = ["E501"]

[tool.mypy]
python_version = "3.12"
files = ["src"]
ignore_missing_imports = true   # aiogram/apscheduler/etc. ship partial or no stubs
check_untyped_defs = true
warn_redundant_casts = true
warn_unused_ignores = true
no_implicit_optional = true
